Fix text align on modal

--- a/src/Components/EventForm/EventForm.css
+++ b/src/Components/EventForm/EventForm.css
@@ -5,7 +5,7 @@ html {
   align-items: center;
 }
 
-h1 {
+.event-title {
   text-align: right;
   margin-right: 20%;
 }
